--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -2,5 +2,20 @@
   "name": "@r/server",
   "version": "1.0.0",
   "license": "UNLICENSED",
-  "private": true
+  "private": true,
+  "dependencies": {
+    "apollo-server": "^2.9.15",
+    "graphql": "^14.5.8"
+  },
+  "devDependencies": {
+    "@types/node-fetch": "^2.5.4",
+    "nodemon": "^2.0.2",
+    "ts-node": "^8.5.4",
+    "typescript": "^3.7.4"
+  },
+  "scripts": {
+    "dev": "nodemon",
+    "build": "tsc",
+    "start": "node ./dist/index.js"
+  }
 }
