--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -6,13 +6,12 @@
   "dependencies": {
     "@prisma/photon": "2.0.0-preview019",
     "apollo-server": "^2.9.15",
-    "graphql": "^14.5.8"
+    "graphql": "^14.5.8",
+    "nexus": "^0.12.0-rc.5"
   },
   "devDependencies": {
-    "@types/node-fetch": "^2.5.4",
     "nodemon": "^2.0.2",
     "prisma2": "^2.0.0-preview019",
-    "ts-node": "^8.5.4",
     "typescript": "^3.7.4"
   },
   "scripts": {
