feat: add get flights

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -16,6 +16,7 @@
   },
   "scripts": {
     "dev": "nodemon",
+    "prisma-dev": "prisma2 dev",
     "build": "tsc",
     "start": "node ./dist/index.js"
   }
